--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/index.js",
+    "start": "node --max-old-space-size=8096 ./src/index.js",
     "e2j": "node ./src/errorToJSON.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "JSONStream": "^1.3.5",
+    "big-json": "^3.2.0"
+  }
 }
